Added SQLite DB

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
-pydub
-flask
 numpy
-pyaudio
-python-docx
-watson_developer_cloud
+
+flask
 requests
 pystache
 gevent
-flask_uwsgi_websocket
-flask-socketio
 soundfile
 eventlet
+
+pydub
+pyaudio
+python-docx
+watson_developer_cloud
+
+flask_uwsgi_websocket
+flask-socketio
+Flask-Login
